--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ödev Planlayıcısı</title>
+    <title>Ödev Listesi</title>
     <style>
         * {
             margin: 0;
@@ -404,7 +404,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📚 Ödev Planlayıcısı</h1>
+            <h1>📚 10/A Ödev Listesi 📚</h1>
             <div class="week-navigator">
                 <button onclick="changeWeek(-1)">◀</button>
                 <div class="week-display" id="weekDisplay">Yükleniyor...</div>
