--- a/index.html
+++ b/index.html
@@ -807,22 +807,22 @@
 
         // Render graph
         function renderGraph(counts) {
-            const maxCount = Math.max(...counts, 1);
-            const graphBars = document.getElementById('graphBars');
-            graphBars.innerHTML = '';
-            
-            counts.forEach((count, index) => {
-                const height = (count / maxCount) * 100;
-                const barWrapper = document.createElement('div');
-                barWrapper.className = 'bar-wrapper';
-                barWrapper.innerHTML = `
-                    <div class="bar" style="height: ${height}%">
-                        <div class="bar-value">${count}</div>
-                    </div>
-                    <div class="bar-label">${daysOfWeek[index].substring(0, 3)}</div>
-                `;
-                graphBars.appendChild(barWrapper);
-            });
+const minBarHeight = 20; // pixels
+
+counts.forEach((count, index) => {
+    const height = (count / maxCount) * 100; // percentage
+    const barHeightPx = Math.max((height / 100) * 300, minBarHeight); // ensure minimum
+    const barWrapper = document.createElement('div');
+    barWrapper.className = 'bar-wrapper';
+    barWrapper.innerHTML = `
+        <div class="bar" style="height: ${barHeightPx}px">
+            <div class="bar-value">${count}</div>
+        </div>
+        <div class="bar-label">${daysOfWeek[index].substring(0, 3)}</div>
+    `;
+    graphBars.appendChild(barWrapper);
+});
+
         }
 
         // Load upcoming homeworks
