--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>10/A Ödev Listesi</title>
     <link rel="manifest" id="manifest-placeholder">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     
     <style>
+        
         :root {
             /* --- Dark Theme (Default) --- */
             --bg-body: #0f172a;       
@@ -90,6 +91,10 @@
             margin: 0 auto;
             padding-bottom: 80px;
         }
+
+        body {
+    font-family: 'Quicksand', sans-serif;
+}
 
         /* --- Header Layout --- */
         header { 
