--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
             margin-top: 24px;
             box-shadow: var(--shadow-md);
             transition: background 0.4s, border 0.4s;
-            max-width: 100%;
-            overflow-x: auto;
             gap: 5px;
+            flex-wrap: wrap;
         }
 
         .view-btn {
